--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
         <item>Pilih Status Pesanan</item>
         <item>menunggu konfirmasi</item>
         <item>pesanan diproses</item>
+        <item>sedang dikirim ke pemesan</item>
         <item>pesanan selesai</item>
         <item>pesanan ditolak</item>
     </string-array>
