--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,5 +66,6 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_maps">Map</string>
+    <string name="namaAplikasi">Aplikasi Pemesanan Catering dan Tenda</string>
     <string name="title_activity_lokasi_penyedia">Map</string>
 </resources>
