--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,10 @@
         <item>pesanan selesai</item>
         <item>pesanan ditolak</item>
     </string-array>
+    <string-array name="listStatusDetailPesanan">
+        <item>tolak</item>
+        <item>terima</item>
+    </string-array>
     <string name="title_activity_dashboard_admin">DashboardAdminActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -68,4 +72,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="namaAplikasi">Aplikasi Pemesanan Catering dan Tenda</string>
     <string name="title_activity_lokasi_penyedia">Map</string>
+    <string name="infoDetailPesanan">Jika ada pesanan ditolak, klik pada text (Ditolak) / gambar pesanan untuk melihat alasan penolakan</string>
 </resources>
